--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,17 @@ dependencies {
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation ("com.github.bumptech.glide:glide:4.12.0") {
+        exclude group: "com.android.support"
+    }
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    annotationProcessor 'androidx.annotation:annotation:1.2.0'
+
+    implementation ("com.github.bumptech.glide:glide:4.12.0@aar") {
+        transitive = true
+    }
+
+    implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
 
 }
