--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -40,9 +45,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-
+    
     implementation ("com.github.bumptech.glide:glide:4.12.0") {
         exclude group: "com.android.support"
     }
@@ -50,10 +53,13 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     annotationProcessor 'androidx.annotation:annotation:1.2.0'
 
+
+
     implementation ("com.github.bumptech.glide:glide:4.12.0@aar") {
         transitive = true
     }
 
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
+
 
 }
