--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,11 @@
         android:theme="@style/Theme.Wall"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".Activity.ResultsActivity"></activity>
         <activity android:name=".Activity.SplashActivity">
+
         </activity>
-        <activity android:name=".Activity.SetWallpaperActivity"></activity>
+        <activity android:name=".Activity.SetWallpaperActivity" />
         <activity android:name=".Activity.MainActivity">
 
             <intent-filter>
